Add Courses and Students management functionality with CRUD operations

--- a/universidad/appsettings.json
+++ b/universidad/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UniversidadContext": "Data Source=UniversidadContext-cf3dcff4-aa02-4d0b-a1c5-24cfd7d11d1a.db"
+  }
 }
